[package]
name = "datafeeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-chains = "0.1.9"
alloy-primitives = "0.6.0"
alloy-sol-types = {version = "0.6.0", features = ["json"]}
alloy-rpc-types =  { git = "https://github.com/alloy-rs/alloy"}
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
